# PE-Client

./: .gitignore  Area.cpp  Area.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  CommandCode.h  Entity.cpp  Entity.h  FloorSection.cpp  FloorSection.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  SFUtils.h  ServerSocket.cpp  ServerSocket.h  Textures.h  Wall.cpp  Wall.h  World.cpp  World.h  command.cpp  command.h  main.cpp  serialization.h  test_client
files/sound/: infiltrate.wma
maps/: level1-tex.txt  level1.txt  level1.txt~  level2.txt
